# qsc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  clean_cmake  m20210129_01_interactiveQscOptimization.m  qsc_in.foo  qsc_in.realistic
.github/workflows/: ci.yml
cmake/: FindNetCDF.cmake  README.md  knownHosts.cmake  specificHosts.cmake
examples/: qsc_in.LandremanSengupta2019_section5.1  qsc_in.LandremanSengupta2019_section5.2  qsc_in.LandremanSenguptaPlunk_section5.1_order_r1_finite_r_linear  qsc_in.multiopt_QA_nfp2  qsc_in.multiopt_QH_nfp4  qsc_in.multiopt_QH_nfp4_well  qsc_in.multiopt_scan_QA_nfp2_small_keep_all_0  qsc_in.multiopt_scan_QH_nfp4  qsc_in.multiopt_scan_QH_nfp4_small_keep_all_1  qsc_in.opt_QH_nfp4  qsc_in.random_scan_realistic  qsc_in.random_scan_small  qsc_in.single_LandremanSengupta2019_section5.1  qsc_in.single_LandremanSengupta2019_section5.2  qsc_in.single_LandremanSenguptaPlunk_section5.1  run_examples  run_examples_single
externalPackages/: README.md  installDoctest.sh  install_catch2.sh
include/: qsc.hpp  vector_matrix.hpp
src/: allocate.cpp  calculate_r1.cpp  calculate_r2.cpp  configurations.cpp  differentiation_matrix.cpp  driver.cpp  grad_B_tensor.cpp  helicity.cpp  hw.cpp  init_axis.cpp  input.cpp  mercier.cpp  multiopt.cpp  multiopt.hpp  multiopt_scan.cpp  multiopt_scan.hpp  multiopt_scan_collect_results.cpp  multiopt_scan_input.cpp  multiopt_scan_write_netcdf.cpp  netcdf_writer.cpp  netcdf_writer.hpp  newton.cpp  opt.cpp  opt.hpp  opt_allocate.cpp  opt_input.cpp  opt_write_netcdf.cpp  optimize.cpp  outfile.cpp  qsc.cpp  qsc.hpp  qsc_driver.cpp  qsc_input.cpp  qsc_write_netcdf.cpp  quartic_roots.cpp  quartic_roots.hpp  r_singularity.cpp  random.cpp  random.hpp  read_netcdf.cpp  (+14 more)
src/tests/: axisymmetry_tests.cpp  curvature_torsion_tests.cpp  differentiation_matrix_tests.cpp  grad_B_tensor_tests.cpp  multiopt_scan_tests.cpp  multiopt_tests.cpp  netcdf_tests.cpp  newton_tests.cpp  nonlinearSolverTests.cpp  opt_tests.cpp  outfile_tests.cpp  published_configurations_tests.cpp  qsc_tests.cpp  quartic_roots_tests.cpp  r2_tests.cpp  random_tests.cpp  scan_tests.cpp  vector_matrix_tests.cpp
tests/: quasisymmetry_out.LandremanSenguptaPlunk_section5.1_order_r1_finite_r_linear.nc  quasisymmetry_out.LandremanSenguptaPlunk_section5.2_order_r1_finite_r_nonlinear.nc  quasisymmetry_out.LandremanSenguptaPlunk_section5.3_order_r1_finite_r_linear.nc  runMPIUnitTests  runTests  travis.sh
